#nullable enable

namespace ModelDto
{
    /// <summary>
    /// Typ segmentu tekstu w jednostce redakcyjnej.
    /// </summary>
    public enum TextSegmentType
    {
        Sentence
    }
}
